k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-clientes-mklens
  labels:
    app: frontend-clientes-mklens
spec:
  type: ClusterIP
  selector:
    app: frontend-clientes-mklens
  ports:
    - name: http
      port: 80
      targetPort: http
