k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-clientes-mklens
  labels:
    app: frontend-clientes-mklens
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - app.marketlenshq.com
  #     secretName: frontend-clientes-mklens-tls
  rules:
    - host: app.marketlenshq.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-clientes-mklens
                port:
                  name: http
